# Mneme

./: .coverage  .gitignore  AUDIT_ACTION_PLAN.md  AUDIT_COMPLETION_CHECKLIST.md  AUDIT_FINDINGS.md  AUDIT_REPORT.md  BUGS_FIXED.md  COMPREHENSIVE_REVIEW.md  CONTEXT_FLOW_VISUALIZATION.md  DOCUMENTATION_INDEX.md  FINAL_AUDIT_SUMMARY.md  LICENSE  LLM_INTEGRATION_FLOW.md  PRODUCTION_READY.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.txt  README.md  SYSTEM_OVERVIEW.md  demo.py  global_knowledge_system.py  hypervector.py  metal_shaders.metal  neuromorphic_agent.py  pyproject.toml  quickstart.sh  test.sh
_archive/: HOW_TO_USE.py  claude_code_integration.py  demo.py  examples.py  get_started.py  interactive_demo.py  quickstart.py  real_world_example.py  working_demo.py
_archive/docs/: CLAUDE_CODE_USAGE.md  COMPLETE.txt  FINAL_STATUS.txt  INDEX.md  INTEGRATION_COMPLETE.md  PROJECT_COMPLETE.md  README_old.md  SIMPLE_ANSWER.txt  START_HERE.txt  SUMMARY.txt  TEST_REPORT.md
_archive/old_docs/: ADVANCED_OPTIMIZATIONS.md  AUDIT.md  CHECKLIST.md  DIMENSION_ANALYSIS.md  FINAL_BENCHMARK_ANALYSIS.md  FINAL_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_PLAN.md  INDEX.md  LANGUAGE_ANALYSIS.md  LSH_IMPLEMENTATION_SUMMARY.md  M4_IMPLEMENTATION_PLAN.md  OPTIMIZATION_ANALYSIS.md  RUST_BENCHMARK_RESULTS.md  RUST_M4_STATUS.md  SESSION_COMPLETE_SUMMARY.md  SIMD_RESULTS.md  START_USING_NOW.md
hypervector_rs/: Cargo.toml
hypervector_rs/src/: lib.rs  optimized_lsh.rs  simd.rs
proof_demo/.claude/knowledge/: knowledge_base.json  system_state.json
proof_demo/.claude/knowledge/projects/rate-limiter/: README.md
proof_demo/.claude/knowledge/projects/rate-limiter/.meta/: origin.json
proof_demo/.claude/knowledge/projects/rate-limiter/docs/: WHY.md
src/: __init__.py  cache.py  config.py  core.py  exceptions.py  incremental_persistence.py  integration.py  lsh_index.py  optimized_network.py  project_tracker.py
src/mneme/: __init__.py  cache.py  crystallization.py  global_knowledge_system.py  hybrid_dispatcher.py  hypervector.py  incremental_persistence.py  integration.py  logging_config.py  metal_backend.py  metal_optimized.py  neuromorphic_agent.py  persistence.py  query_interface.py
