[package]
name = "hypervector_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "hypervector_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
numpy = "0.28"
ndarray = "0.16"
rayon = "1.10"
ahash = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
